cluster_init/routes/molstar-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: molstar-ui
  namespace: openfold
spec:
  parentRefs:
    - name: warp-edge-gateway
      namespace: envoy-gateway-system
  hostnames:
    - molstar.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: molstar-viewer
          port: 8080
