cluster_init/routes/openfold-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-ui
  namespace: openfold
spec:
  parentRefs:
    - name: warp-edge-gateway
      namespace: envoy-gateway-system
  hostnames:
    - argo.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo-workflows-server
          port: 2746
